--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 .navbarContainer {
     display: flex;
     justify-content: space-around;
-    background-color: #000;
+    background-color: #7600dc;
     font-size: 1.2em;
 }
 .navbarHome {
