--- a/src/components/MovieDetail/MovieDetail.module.css
+++ b/src/components/MovieDetail/MovieDetail.module.css
@@ -17,3 +17,24 @@
 ul#list li {
     display:inline;
 }
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  width: 300px;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
